# aga8-js

./: .gitignore  CMakeLists.txt  Detail_8cpp.html  Detail_8cpp.js  Detail_8cpp__incl.map  Detail_8cpp__incl.md5  Detail_8cpp_source.html  Detail_8h.html  Detail_8h.js  Detail_8h__dep__incl.map  Detail_8h__dep__incl.md5  Detail_8h__incl.map  Detail_8h__incl.md5  Detail_8h_source.html  Doxyfile  For-example.html  GERG2008_8cpp.html  GERG2008_8cpp.js  GERG2008_8cpp__incl.map  GERG2008_8cpp__incl.md5  GERG2008_8cpp_source.html  GERG2008_8h.html  GERG2008_8h.js  GERG2008_8h__dep__incl.map  GERG2008_8h__dep__incl.md5  GERG2008_8h__incl.map  GERG2008_8h__incl.md5  GERG2008_8h_source.html  Gross_8cpp.html  Gross_8cpp.js  Gross_8cpp__incl.map  Gross_8cpp__incl.md5  Gross_8cpp_source.html  Gross_8h.html  Gross_8h.js  Gross_8h__dep__incl.map  Gross_8h__dep__incl.md5  Gross_8h__incl.map  Gross_8h__incl.md5  Gross_8h_source.html  (+83 more)
.github/workflows/: build.yaml  publish_to_cloudflare.yaml
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_1b.js  all_1c.js  all_1d.js  all_1e.js  all_1f.js  all_2.js  all_20.js  all_21.js  all_22.js  all_23.js  all_24.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  (+54 more)
src/aga8-sonic-nozzle-vue/: README.md  index.html  package-lock.json  package.json  postcss.config.js  tsconfig.app.json  vite.config.ts
src/aga8-sonic-nozzle-vue/src/: App.vue
src/aga8-sonic-nozzle-vue/src/cards/: Compute.vue
src/aga8-sonic-nozzle-vue/src/components/: Clipboard.vue  DoubleRange.vue  footer.vue  header.vue
src/aga8-sonic-nozzle-vue/src/utilities/: scientific.ts  sonic.ts
src/aga8-vue/: README.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
src/aga8-vue/src/: App.vue
src/aga8-vue/src/cards/: Compute.vue  Detail.vue
src/aga8-vue/src/components/: Clipboard.vue  GithubCorner.vue  footer.vue  header.vue
src/aga8-vue/src/utilities/: viteHelper.ts
src/cpp/: Detail.cpp  Detail.h  GERG2008.cpp  GERG2008.h  Gross.cpp  Gross.h  bindings.cpp  intellisense.patch
src/doxygen/: footer.html  header.html
src/examples/: NG_Compositions.csv  NG_Compositions.json  convert_nist_ng_types.ts  gas-properties-calculations.ts  package-lock.json  package.json  sonic-nozzle-flow.ts
src/typescript/: sonic.ts
test/: detail.test.ts  gerg.test.ts  gerg2008.test.ts  gross.test.ts
